Related to #36710: add a "use_viewport" option to the render operator, to specify if the layers and camera of the 3d viewport should be used. Python scripts don't always want this behavior.