source/blender/editors/screen/screen_ops.c
@@ -3940,9 +3940,11 @@ void ED_keymap_screen(wmKeyConfig *keyconf)
 	
 	
 	/* render */
-	WM_keymap_add_item(keymap, "RENDER_OT_render", F12KEY, KM_PRESS, 0, 0);
+	kmi = WM_keymap_add_item(keymap, "RENDER_OT_render", F12KEY, KM_PRESS, 0, 0);
+	RNA_boolean_set(kmi->ptr, "use_viewport", TRUE);
 	kmi = WM_keymap_add_item(keymap, "RENDER_OT_render", F12KEY, KM_PRESS, KM_CTRL, 0);
 	RNA_boolean_set(kmi->ptr, "animation", TRUE);
+	RNA_boolean_set(kmi->ptr, "use_viewport", TRUE);
 	WM_keymap_add_item(keymap, "RENDER_OT_view_cancel", ESCKEY, KM_PRESS, 0, 0);
 	WM_keymap_add_item(keymap, "RENDER_OT_view_show", F11KEY, KM_PRESS, 0, 0);
 	WM_keymap_add_item(keymap, "RENDER_OT_play_rendered_anim", F11KEY, KM_PRESS, KM_CTRL, 0);
